[package]
name = "lettuces"
description = "A grid logic crate combining Hexx and custom logic for square and isometric grids to provide a unified grid logic crate."
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Noah Shomette <git@noahshomette.me>"]
repository = "https://github.com/NoahShomette/lettuces"
homepage = "https://github.com/NoahShomette/lettuces"
version = "0.0.1"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
hexx = { version = "0.17.0" }
