[package]
name = "lettuces"
description = "A grid logic crate combining Hexx and custom logic for square and isometric grids to provide a unified grid logic crate."
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Noah Shomette <git@noahshomette.me>"]
repository = "https://github.com/NoahShomette/lettuces"
homepage = "https://github.com/NoahShomette/lettuces"
version = "0.0.4"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["square", "hex"]
hex = []
square = []
serde = ["dep:serde", "serde/default", "bevy/serialize"]
bevy = ["dep:bevy"]
bevy_reflect = ["bevy"]

[dependencies]
hexx = { version = "0.17.0" }
glam = { version = "0.28.0" }
serde = { version = "1.0.183", optional = true }
bevy = { version = "0.13", default-features = false, features = [
], optional = true }
